--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Tabela de preços Ateliê Cleide Pinheiro</title>
 </head>
 <body>
+    <header style="text-align: center; margin: 30px 0;">
+        <h1 class="nome_empresa">Ateliê Cleide Pinheiro</h1>
+        <h2 class="titulo">Apliques personalizados de pasta americana para doces</h2>
+    </header>
     <table class="tabela_valores">
         <thead class="cabeçalho">
           <tr>
@@ -101,6 +105,11 @@
           </tr>
         </tbody>
       </table>
+
+      <nav class="nav_list">
+        <a href="https://wa.me/5522981445839" class="nav_link"><img src="images/logo_whatsapp.png" alt="whatsapp"></a>
+        <a href="https://www.instagram.com/ateliecleidepinheiro?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" class="nav_link"><img src="images/logo_insta.png" alt="instagram"></a>
+      </nav>
       
 </body>
 </html>
